Fix display mode toggle.

--- a/src/templates/dillo/posts_list.pug
+++ b/src/templates/dillo/posts_list.pug
@@ -142,7 +142,7 @@ script.
 	//- Emoji!
 	twemoji.parse(document.getElementById('list-hits'));
 
-	let $displayToggleWidget = $('.wgt-display-mode-toggle');
+	var $displayToggleWidget = $('.wgt-display-mode-toggle');
 
 	// Browse type: icon or list
 	function projectBrowseTypeIcon() {
