Cleanup: Move js for posts list display mode into its own file.

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -71,7 +71,7 @@ li
 				option(value="top") {{ _('Top') }}
 
 			button.wgt-display-mode-toggle.btn.wgt.btn-icon-only(
-				title="Toggle Display Mode")
+				title="{{ _('Toggle Display Mode') }}")
 				i.pi-layout
 
 	#list-hits
