UI: Hide date on the smallest screen size.

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -48,6 +48,10 @@
     &:before
       display: none
 
+  .item-date
+    +media-xs
+      display: none
+
   //- Status-dev styling in posts_list.
   &.Duplicate,
   &.Rejected,
