UI: Fix Responsive oembed

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -27,7 +27,7 @@
     width: 100%
 
   &.oembed
-    height: calc((9/16) * 100vw - 280px)
+    height: calc((9/16) * 52vw)
     max-height: 640px
     overflow-y: auto
 
