UI: Font-size adjustments.

--- a/src/styles/_config_global.sass
+++ b/src/styles/_config_global.sass
@@ -1,7 +1,8 @@
 
 /* Type */
-$font-size-smaller: 11px
-$font-size-small: 13px
+$font-size-smaller: 12px
+$font-size-small: 14px
+$font-size-regular: 16px
 $font-size-large: 18px
 $font-size-extra-large: 20px
 
