--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -110,9 +110,10 @@ html(lang='en')
 						| {% else %}
 						| {% set index_url = url_for('posts.index', community_url=project.url) %}
 						| {% endif %}
-						a.btn.btn-primary.d-none.d-sm-block.ml-3(
-							href="{{ index_url  }}")
-							span {{ project.name }}
+						.btn-group
+							a.btn.btn-primary.rounded.d-none.d-sm-block.ml-3(
+								href="{{ index_url  }}")
+								span {{ project.name }}
 
 
 						.d-header-action.refine
