UI: Small style tweak on forms in community edit.

--- a/src/styles/_forms.sass
+++ b/src/styles/_forms.sass
@@ -131,7 +131,12 @@
 	border-bottom: thin solid $color-background
 	padding: 15px
 
-#node-edit-embed
+#node-edit-container
+	label
+		color: $color-text
+	input, textarea
+		background-color: $color-background-dark
+
 	.dyn_schema textarea,
 	.form_schema textarea,
 	.permissions textarea
